    JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
  * Add a new JAMWiki:Header system topic that allows adding a custom message
    to the top of all pages, just below the tab bar.
  * Move several system configuration files (jamwiki-configuration.xml, spam
    blacklist) out of the webapp root and into the JAMWiki system directory to
    make upgrading simpler.
  * Be more strict with HTML-like tags: tags of the form "< tag>" or "< / tag>"
    are no longer supported and must be of the form "<tag>" or "</tag>".  This
    matches Mediawiki.
  * Remove ability to automatically upgrade from versions prior to 1.0.
  * Upgrade to Lucene Search 3.5.
  * Upgrade to commons-lang 3.1.
  * Upgrade to commons-io-2.1.

Bugfixes:

  * Topic exports containing UTF-8 should not escape unicode characters.
    Reported by cstenkes.
  * Overhaul paragraph parsing to fix several edge cases and improve Mediawiki
    compatibility.  For example, paragraphs can now start with "<".
  * Fix wiki line break ("----") to match Mediawiki by allowing four or more
    dashes as well as text on the same line as the dashes.
  * Newlines in table cells will now start a paragraph, matching Mediawiki
    behavior.
  * Allow whitespace in front of wiki table syntax (" {|") to match Mediawiki.

Translation Updates:

  * None.


1.1.3
=====

New Features:

  * None.

Bugfixes:

  * Fix three instances where database connections were not being properly
    released.  Reported with extensive debugging help by Igor Zhuk.
  * For images that do not specify frame or thumb format the caption should be
    used as the alt and title tag.  Reported by Jun Fujikawa.

Translation Updates:

  * None.


1.1.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * "{{ns:}}" should return the same value as "{{ns:0}}" to match Mediawiki.

Translation Updates:

  * Updated Japanese translations (jfujikawa).
  * Updated Japanese translations (nattolover).