@@ -1243,3 +1243,7 @@ UPGRADE_110_UPDATE_RECENT_CHANGE_LOG_SUB_TYPE_UNDELETE = \
     update jam_recent_change set log_sub_type = 11 where log_type = 1 and log_params like '%|7';
 UPGRADE_110_UPDATE_RECENT_CHANGE_LOG_SUB_TYPE_DELETE = \
     update jam_recent_change set log_sub_type = 10 where log_type = 1 and log_params not like '%|7';
+UPGRADE_120_ADD_ROLE_REGISTER = \
+    insert into jam_role (role_name) values ('ROLE_REGISTER');
+UPGRADE_120_ADD_ROLE_REGISTER_TO_ANONYMOUS = \
+    insert into jam_group_authorities (group_id, authority) values (1, 'ROLE_REGISTER');
