@@ -24,6 +24,8 @@ New Features:
   * Move several system configuration files (jamwiki-configuration.xml, spam
     blacklist) out of the webapp root and into the JAMWiki system directory to
     make upgrading simpler.
+  * Add a new ROLE_REGISTER to allow enabling/disabling self-registration for
+    anonymous users.  By default anonymous users are allowed to self-register.
   * Be more strict with HTML-like tags: tags of the form "< tag>" or "< / tag>"
     are no longer supported and must be of the form "<tag>" or "</tag>".  This
     matches Mediawiki.
